
    iptables-restore v1.4.10: Couldn't load target
    `dsl0_fwd':/usr/lib/xtables/libipt_dsl0_fwd.so: cannot open shared object
    file: No such file or directory

    Error occurred at line: 113
    Try `iptables-restore -h' or 'iptables-restore --help' for more
    information.

    ERROR: iptables-restore Failed. Input is in
    	   /var/lib/shorewall/.iptables-restore-input

4.4.20.1

1)  The address of the Free Software Foundation has been corrected in
    the License files.

2)  The shorewall[6].conf file installed in
    /usr/share/shorewall[6]/configfiles is no longer modified for use
    with Shorewall[6]-lite. When creating a new configuration for a
    remote forewall, two lines need to be modified in the copy

    	   CONFIG_PATH=/usr/share/shorewall (or shorewall6)
	   STARTUP_LOG=/var/log/shorewall-lite-init.log
	               (or shorewall6-lite-init.log)

3)  The 4.4.20 Shorewall6 installer always installed the plain
    (unannotated) version of shorewall6.conf, regardless of the '-p'
    setting.

4)  Due to dissatisfaction with the default setting for configuration
    file annotation, the default has returned to 'plain' (unannotated)
    configuration files. If you wish to include documentation in your
    installed configuration files, use the '-a' option in the
    installer. The '-p' option will remain supported until 4.4.21 when
    it will be removed.

4.4.20

1)  Previously, when a device number was explicitly specified in
    /etc/shorewall/tcdevices, all unused numbers less than the one
    specified were unavailable for allocation to following entries that
    did not specify a number. Now, the compiler selects the lowest
    unallocated number when no device number is explicitly allocated.

2)  The obsolete PKTTYPE option has been removed from shorewall.conf
    and the associated manpage.

3)  The iptables 1.4.11 release produces an error when negative numbers
    are specified for IPMARK mask values. Shorewall now converts such