@@ -37,3 +37,7 @@
 
     ERROR: iptables-restore Failed. Input is in
     	   /var/lib/shorewall/.iptables-restore-input
+
+6)  The following extraneous warning message may be ignored:
+
+    	WARNING: sfilter is ineffective with FASTACCEPT=Yes
