@@ -44,6 +44,10 @@ VI.   PROBLEMS CORRECTED AND NEW FEATURES IN PRIOR RELEASES
     ERROR: iptables-restore Failed. Input is in
     	   /var/lib/shorewall/.iptables-restore-input
 
+6)  The following incorrect warning message has been eliminated:
+
+    	WARNING: sfilter is ineffective with FASTACCEPT=Yes
+
 4.4.20.1
 
 1)  The address of the Free Software Foundation has been corrected in
